Deploy fixing bugs: in some places change svg tag in img

--- a/benefits/benefits-7.html
+++ b/benefits/benefits-7.html
@@ -19,24 +19,15 @@
         <div class="row benefits-7__desktop">
           <div class="col-4">
             <ul class="benefits-7__list"> 
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Share team inboxes</h3>
                 <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </li>
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Manage your team with reports</h3>
                 <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </li>
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Deliver instant answers</h3>
                 <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </li>
@@ -47,24 +38,15 @@
           </div>
           <div class="col-4">
             <ul class="benefits-7__list"> 
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Manage your team with reports</h3>
                 <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </li>
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Connect with customers</h3>
                 <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </li>
-              <li class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <li class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Connect with customers</h3>
                 <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </li>
@@ -75,55 +57,37 @@
           <picture class="benefits-7__poster-wrap"> <img class="benefits-7__poster" src="../assets/img/benefits/benefit-7.jpg" alt=""></picture>
           <ul class="row benefits-7__mobile-list">
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Share team inboxes</h3>
                 <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Manage your team with reports</h3>
                 <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Deliver instant answers</h3>
                 <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Manage your team with reports</h3>
                 <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Connect with customers</h3>
                 <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits-7__item">
-                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
-                </svg>
+              <div class="benefits-7__item"><img class="benefits-7__item-icon" src="../assets/img/benefits/benefit-7-icon.svg" alt="">
                 <h3 class="benefits-7__item-name">Connect with customers</h3>
                 <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </div>
