--- a/modal/modal-1.html
+++ b/modal/modal-1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/modal/modal-1.css">
     <script defer src="../assets/scripts/base.js"></script>
     <script defer src="../assets/scripts/modal/modal-1.js"></script>
