--- a/benefits/benefits-4.html
+++ b/benefits/benefits-4.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/libs.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/benefits/benefits-4.css">
+    <script defer src="../assets/scripts/base.js"></script>
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
