--- a/gallery/gallery-3-4.html
+++ b/gallery/gallery-3-4.html
@@ -4,43 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/libs.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/gallery/gallery-3-4.css">
+    <script defer src="../assets/scripts/base.js"></script>
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
     <section class="gallery-3-4 section block">
       <div class="gallery-3-4__container container"> 
         <h2 class="gallery-3-4__title">Gallery </h2>
-        <ul class="row gallery-3-4__list"> 
-          <div class="gallery-3-4__item gallery-3-4__item_8">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_2">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_2">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_5">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_2">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_5">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_4">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_4">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-4__item gallery-3-4__item_4">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture>
-          </div>
-        </ul>
+        <div class="row gallery-3-4__list"><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-1.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-2.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-3.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-4.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-5.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-6.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-7.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-8.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-9.jpg">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture></a></div>
       </div>
     </section>
   </body>
