--- a/gallery/gallery-3-6.html
+++ b/gallery/gallery-3-6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/libs.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/gallery/gallery-3-6.css">
     <script defer src="../assets/scripts/base.js"></script>
@@ -14,64 +15,36 @@
     <section class="gallery-3-6 section block">
       <div class="gallery-3-6__container container"> 
         <h2 class="gallery-3-6__title">Gallery </h2>
-        <ul class="row gallery-3-6__list"> 
-          <div class="gallery-3-6__item gallery-3-6__item_8">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_2">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_2">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_5">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_2">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_5">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_4">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_4">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture>
-          </div>
-          <div class="gallery-3-6__item gallery-3-6__item_4">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture>
-          </div>
-        </ul>
+        <div class="row gallery-3-6__list"> <a class="gallery-3-6__item gallery-3-6__item_8" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-1.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-2.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-3.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-4.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-5.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-6.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-7.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-8.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-9.jpg">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture></a></div>
         <div class="swiper gallery-3-6__slider">
           <ul class="swiper-wrapper"> 
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture>
-            </li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-1.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-2.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-3.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-4.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-5.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-6.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-7.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-8.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-9.jpg">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture></a></li>
           </ul>
         </div>
       </div>
