--- a/gallery/gallery-5-2.html
+++ b/gallery/gallery-5-2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/libs.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/gallery/gallery-5-2.css">
     <script defer src="../assets/scripts/base.js"></script>
@@ -19,32 +20,18 @@
         </div>
         <div class="swiper gallery-5-2__slider">
           <ul class="swiper-wrapper"> 
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-1.jpg">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-2.jpg">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-3.jpg">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-3.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-1.jpg">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-2.jpg">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
             <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture>
-            </li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture>
+              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-3.jpg" alt=""></picture>
             </li>
           </ul>
           <div class="gallery-5-2__slider-btn-block">
