--- a/modal/modal-2.html
+++ b/modal/modal-2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/libs.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/modal/modal-2.css">
     <script defer src="../assets/scripts/base.js"></script>
-    <script defer src="../assets/scripts/modal/modal-2.js"></script>
   </head>
   <body>
     <!-- Удалить класс modal_active перед добавления в конструктор-->
