Deploy benefits-10, benefits-num-6 sections, gallery section edits

--- a/gallery/gallery-3-4.html
+++ b/gallery/gallery-3-4.html
@@ -14,15 +14,15 @@
     <section class="gallery-3-4 section block">
       <div class="gallery-3-4__container container"> 
         <h2 class="gallery-3-4__title">Gallery </h2>
-        <div class="row gallery-3-4__list"><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-1.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-2.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-3.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-4.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-5.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-6.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-7.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-8.jpg">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="../assets/img/gallery/4/item-9.jpg">
+        <div class="row gallery-3-4__list"><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
             <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/img/gallery/4/item-9.jpg" alt=""></picture></a></div>
       </div>
     </section>
