--- a/gallery/gallery-5-2.html
+++ b/gallery/gallery-5-2.html
@@ -20,15 +20,15 @@
         </div>
         <div class="swiper gallery-5-2__slider">
           <ul class="swiper-wrapper"> 
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-1.jpg">
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
                 <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-2.jpg">
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
                 <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-3.jpg">
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
                 <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-3.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-1.jpg">
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
                 <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="../assets/img/gallery/5/gallery-2.jpg">
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
                 <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
             <li class="swiper-slide">
               <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/img/gallery/5/gallery-3.jpg" alt=""></picture>
