Deploy benefits-11 section, fixing bugs

--- a/header/header-1-4.html
+++ b/header/header-1-4.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/libs.css">
+    <link rel="stylesheet" href="../assets/styles/typography.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
     <link rel="stylesheet" href="../assets/styles/header/header-1-4.css">
     <script defer src="../assets/scripts/base.js"></script>
@@ -21,19 +22,19 @@
             <ul class="header-1-4__nav-list"> 
               <li class="header-1-4__nav-item"> 
                 <div class="select select-nav">
-                  <div data-value="">Locations</div>
-                  <div data-value="link1"><a class="header-1-4__nav-link" href="#">Link 1</a></div>
-                  <div data-value="link2"><a class="header-1-4__nav-link" href="#">Link 2</a></div>
-                  <div data-value="link3"><a class="header-1-4__nav-link" href="#">Link 3</a></div>
-                  <div data-value="link4"><a class="header-1-4__nav-link" href="#">Link 4</a></div>
+                  <button data-value="" type="button">Locations</button>
+                  <button data-value="link1" type="button"><a class="header-1-4__nav-link" href="#">Link 1</a></button>
+                  <button data-value="link2" type="button"><a class="header-1-4__nav-link" href="#">Link 2</a></button>
+                  <button data-value="link3" type="button"><a class="header-1-4__nav-link" href="#">Link 3</a></button>
+                  <button data-value="link4" type="button"><a class="header-1-4__nav-link" href="#">Link 4</a></button>
                 </div>
               </li>
               <li class="header-1-4__nav-item"> <a class="header-1-4__nav-link" href="#">Restaurant</a></li>
               <li class="header-1-4__nav-item"> 
                 <div class="select select-nav">
-                  <div data-value="">Services</div>
-                  <div data-value="link1"><a class="header-1-4__nav-link" href="#">Link 1</a></div>
-                  <div data-value="link2"><a class="header-1-4__nav-link" href="#">Link 2</a></div>
+                  <button data-value="" type="button">Services</button>
+                  <button data-value="link1" type="button"><a class="header-1-4__nav-link" href="#">Link 1</a></button>
+                  <button data-value="link2" type="button"><a class="header-1-4__nav-link" href="#">Link 2</a></button>
                 </div>
               </li>
               <li class="header-1-4__nav-item"> <a class="header-1-4__nav-link" href="#">Menu</a></li>
