Deploy Fixing benefits-num-3 and header select width

--- a/header/header-1-4.html
+++ b/header/header-1-4.html
@@ -21,7 +21,7 @@
           <nav class="header-1-4__nav"> 
             <ul class="header-1-4__nav-list"> 
               <li class="header-1-4__nav-item"> 
-                <div class="select select-nav">
+                <div class="select select-nav header-select">
                   <button data-value="" type="button">Locations</button>
                   <button data-value="link1" type="button"><a class="header-1-4__nav-link" href="#">Link 1</a></button>
                   <button data-value="link2" type="button"><a class="header-1-4__nav-link" href="#">Link 2</a></button>
@@ -31,9 +31,9 @@
               </li>
               <li class="header-1-4__nav-item"> <a class="header-1-4__nav-link" href="#">Restaurant</a></li>
               <li class="header-1-4__nav-item"> 
-                <div class="select select-nav">
+                <div class="select select-nav header-select">
                   <button data-value="" type="button">Services</button>
-                  <button data-value="link1" type="button"><a class="header-1-4__nav-link" href="#">Link 1</a></button>
+                  <button data-value="link1" type="button"><a class="header-1-4__nav-link" href="#">Link 1 Link 1 Link 1</a></button>
                   <button data-value="link2" type="button"><a class="header-1-4__nav-link" href="#">Link 2</a></button>
                 </div>
               </li>
