--- a/header/header-1-1.html
+++ b/header/header-1-1.html
@@ -20,7 +20,7 @@
           <nav class="header-1-1__nav"> 
             <ul class="header-1-1__nav-list"> 
               <li class="header-1-1__nav-item"> 
-                <div class="select select-nav">
+                <div class="select select-nav header-select">
                   <button data-value="" type="button">Locations</button>
                   <button data-value="link1" type="button"><a class="header-1-1__nav-link" href="#">Link 1</a></button>
                   <button data-value="link2" type="button"><a class="header-1-1__nav-link" href="#">Link 2</a></button>
@@ -30,7 +30,7 @@
               </li>
               <li class="header-1-1__nav-item"> <a class="header-1-1__nav-link" href="#">Restaurant</a></li>
               <li class="header-1-1__nav-item"> 
-                <div class="select select-nav">
+                <div class="select select-nav header-select">
                   <button data-value="" type="button">Services</button>
                   <button data-value="link1" type="button"><a class="header-1-1__nav-link" href="#">Link 1</a></button>
                   <button data-value="link2" type="button"><a class="header-1-1__nav-link" href="#">Link 2</a></button>
