--- a/about/about-1.html
+++ b/about/about-1.html
@@ -17,7 +17,7 @@
       <div class="about-1__container container"> 
         <div class="about-1__content">
           <div class="about-1__text-block">
-            <div class="about-1__title-block"> <span class="about-1__subtitle">Our studio</span>
+            <div class="about-1__title-block"> <span class="about-1__subtitle subtitle">Our studio</span>
               <h2 class="about-1__title">Design that influences how people work, learn, live and experience the world. </h2>
             </div>
             <div class="about-1__desc"> 
