--- a/about/about-2.html
+++ b/about/about-2.html
@@ -17,7 +17,7 @@
       <div class="about-2__container container"> 
         <div class="about-2__content">
           <div class="about-2__text-block">
-            <div class="about-2__title-block"> <span class="about-2__subtitle">Our studio</span>
+            <div class="about-2__title-block"> <span class="about-2__subtitle subtitle">Our studio</span>
               <h2 class="about-2__title">Design that influences how people work, learn, live and experience the world. </h2>
             </div>
             <div class="about-2__desc"> 
