--- a/benefits-num/benefits-num-6.html
+++ b/benefits-num/benefits-num-6.html
@@ -15,7 +15,7 @@
     <section class="benefits-num-6 section block">
       <div class="benefits-num-6__container container">
         <div class="benefits-num-6__text-block">
-          <div class="benefits-num-6__title-block"> <span class="benefits-num-6__subtitle">Features</span>
+          <div class="benefits-num-6__title-block"> <span class="benefits-num-6__subtitle subtitle">Features</span>
             <h2 class="benefits-num-6__title">Analytics that feels like it’s from the future</h2>
           </div>
           <p class="benefits-num-6__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
