--- a/benefits/benefits-10.html
+++ b/benefits/benefits-10.html
@@ -15,7 +15,7 @@
     <section class="benefits-10 section block">
       <div class="benefits-10__container container">
         <div class="benefits-10__text-block"> 
-          <div class="benefits-10__title-block"><span class="benefits-10__subtitle">Features</span>
+          <div class="benefits-10__title-block"><span class="benefits-10__subtitle subtitle">Features</span>
             <h2 class="benefits-10__title">Cutting-edge features for advanced analytics</h2>
           </div>
           <p class="benefits-10__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
