--- a/benefits/benefits-4.html
+++ b/benefits/benefits-4.html
@@ -15,7 +15,7 @@
     <section class="benefits-4 section block">
       <div class="benefits-4__container container"> 
         <div class="benefits-4__text-block"> 
-          <div class="benefits-4__title-block"> <span class="benefits-4__subtitle">Features</span>
+          <div class="benefits-4__title-block"> <span class="benefits-4__subtitle subtitle">Features</span>
             <h2 class="benefits-4__title">Analytics that feels like it’s from the future</h2>
           </div>
           <p class="benefits-4__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
