--- a/contacts/contacts-2.html
+++ b/contacts/contacts-2.html
@@ -14,7 +14,7 @@
     <!-- Добавить к block класс block_dark-->
     <section class="contacts-2 section block">
       <div class="contacts-2__container container">
-        <div class="contacts-2__text-block"> <span class="contacts-2__subtitle">Contact us</span>
+        <div class="contacts-2__text-block"> <span class="contacts-2__subtitle subtitle">Contact us</span>
           <h2 class="contacts-2__title">We’d love to hear from you</h2>
           <p class="contacts-2__desc">Our friendly team is always here to chat.</p>
         </div>
