--- a/hero/hero-6.html
+++ b/hero/hero-6.html
@@ -18,7 +18,7 @@
         <picture class="hero-6__img-wrap"> <img class="hero-6__img" src="../assets/img/hero/bg-6.jpg" alt=""></picture>
         <div class="hero-6__content"> 
           <div class="hero-6__text-block"> 
-            <h2 class="hero-6__title">Анатолий Белый  </h2><span class="hero-6__subtitle">"Я здесь!"</span>
+            <h2 class="hero-6__title">Анатолий Белый  </h2><span class="hero-6__subtitle subtitle">"Я здесь!"</span>
           </div>
           <button class="hero-6__btn btn btn_extralarge btn_black">Купить билет</button>
         </div>
