--- a/menu/menu-2.html
+++ b/menu/menu-2.html
@@ -15,7 +15,7 @@
     <!-- Заменить класс btn_black на btn_white-->
     <section class="menu-2 section block">
       <div class="menu-2__container container"> 
-        <div class="menu-2__text-block"> <span class="menu-2__subtitle">Delicious</span>
+        <div class="menu-2__text-block"> <span class="menu-2__subtitle subtitle">Delicious</span>
           <h2 class="menu-2__title">Weekly Lunch menu excerpt</h2>
         </div>
         <div class="menu-2__content">
