--- a/modal/modal-1.html
+++ b/modal/modal-1.html
@@ -28,7 +28,7 @@
           </button>
           <div class="modal-1__text-block">
             <div class="modal-1__title-block">
-              <h2 class="modal-1__title">Анатолий Белый  </h2><span class="modal-1__subtitle">"Я здесь!"</span>
+              <h2 class="modal-1__title">Анатолий Белый  </h2><span class="modal-1__subtitle subtitle">"Я здесь!"</span>
             </div>
             <ul class="modal-1__info"> 
               <li class="modal-1__info-item">26.03.2023 - 17.12.2023</li>
