--- a/tickets/ticket-1.html
+++ b/tickets/ticket-1.html
@@ -19,7 +19,7 @@
         <div class="row ticket-1__list">
           <div class="col-8 col-xl-10 col-lg">
             <div class="ticket-1__head"> 
-              <div class="ticket-1__title-block"><span class="ticket-1__subtitle">Die Anzahl der Plätze ist begrenzt</span>
+              <div class="ticket-1__title-block"><span class="ticket-1__subtitle subtitle">Die Anzahl der Plätze ist begrenzt</span>
                 <h2 class="ticket-1__title">Tickets</h2>
               </div>
               <p class="ticket-1__desc">Die Anzahl der Plätze ist begrenzt. Greif zu. Die Tickets sind auch auf der Seite unseres Partners tixcom.de erhältlich.</p>
