--- a/benefits-num/benefits-num-7.html
+++ b/benefits-num/benefits-num-7.html
@@ -14,29 +14,31 @@
     <!-- Добавить к block класс block_dark-->
     <section class="benefits-num-7 section block">
       <div class="benefits-num-7__container container">
-        <div class="benefits-num-7__text-block"><span class="benefits-num-7__subtitle">Features</span>
+        <div class="benefits-num-7__text-block"><span class="benefits-num-7__subtitle subtitle">Features</span>
           <div class="benefits-num-7__title-block">
             <h2 class="benefits-num-7__title">Gönnen Sie sich eine Auszeit für eine kulinarische Reise durch Italien </h2>
             <p class="benefits-num-7__desc">Geniessen Sie unsere Köstlichkeiten und italienische Spezialitäten. Unsere Köche zaubern für Sie unvergessliche Geschmackserlebnisse. </p>
           </div>
         </div>
-        <ul class="row benefits-num-7__list">
-          <li class="col-4 col-md">
-            <div class="benefits-num-7__item"> 
-              <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">400+</span>Projects completed</h3>
-            </div>
-          </li>
-          <li class="col-4 col-md">
-            <div class="benefits-num-7__item"> 
-              <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">600%</span>Return on investment</h3>
-            </div>
-          </li>
-          <li class="col-4 col-md">
-            <div class="benefits-num-7__item"> 
-              <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">10k</span>Global downloads</h3>
-            </div>
-          </li>
-        </ul>
+        <div class="row-container">
+          <ul class="row benefits-num-7__list">
+            <li class="col-4 col-md">
+              <div class="benefits-num-7__item"> 
+                <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">400+</span>Projects completed</h3>
+              </div>
+            </li>
+            <li class="col-4 col-md">
+              <div class="benefits-num-7__item"> 
+                <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">600%</span>Return on investment</h3>
+              </div>
+            </li>
+            <li class="col-4 col-md">
+              <div class="benefits-num-7__item"> 
+                <h3 class="benefits-num-7__name"> <span class="benefits-num-7__name_big">10k</span>Global downloads</h3>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
