--- a/benefits/benefits-11.html
+++ b/benefits/benefits-11.html
@@ -15,7 +15,7 @@
     <section class="benefits-11 section block">
       <div class="benefits-11__container container">
         <div class="benefits-11__text-block"> 
-          <div class="benefits-11__title-block"><span class="benefits-11__subtitle">Features</span>
+          <div class="benefits-11__title-block"><span class="benefits-11__subtitle subtitle">Features</span>
             <h2 class="benefits-11__title">Cutting-edge features for advanced analytics</h2>
           </div>
           <p class="benefits-11__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
