--- a/benefits/benefits-7.html
+++ b/benefits/benefits-7.html
@@ -15,7 +15,7 @@
     <section class="benefits-7 section block">
       <div class="benefits-7__container container">
         <div class="benefits-7__text-block"> 
-          <div class="benefits-7__title-block"> <span class="benefits-7__subtitle">Features</span>
+          <div class="benefits-7__title-block"> <span class="benefits-7__subtitle subtitle">Features</span>
             <h2 class="benefits-7__title">Cutting-edge features for advanced analytics</h2>
           </div>
           <p class="benefits-7__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
