--- a/benefits/benefits-8.html
+++ b/benefits/benefits-8.html
@@ -15,7 +15,7 @@
     <section class="benefits-8 section block">
       <div class="benefits-8__container container">
         <div class="benefits-8__text-block"> 
-          <div class="benefits-8__title-block"> <span class="benefits-8__subtitle">Features</span>
+          <div class="benefits-8__title-block"> <span class="benefits-8__subtitle subtitle">Features</span>
             <h2 class="benefits-8__title">Cutting-edge features for advanced analytics</h2>
           </div>
           <p class="benefits-8__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
