--- a/cta/cta-5.html
+++ b/cta/cta-5.html
@@ -16,7 +16,7 @@
     <section class="cta-5 section block">
       <div class="cta-5__container container"> 
         <div class="cta-5__content"> 
-          <div class="cta-5__title-block"><span class="cta-5__subtitle">Mach mit!</span>
+          <div class="cta-5__title-block"><span class="cta-5__subtitle subtitle">Mach mit!</span>
             <h2 class="cta-5__title">Werde Teil der Bewegung „Comedy Union Deutschland“!</h2>
           </div>
           <button class="cta-5__btn btn btn_extralarge btn_black" type="button">Купить билет</button>
