Deploy galley-8-1 section, refactoring, fixing bugs

--- a/cta/cta-2.html
+++ b/cta/cta-2.html
@@ -11,14 +11,10 @@
     <script defer src="../assets/scripts/base.js"></script>
   </head>
   <body>
-    <!-- Добавить к block класс block_dark-->
-    <!-- Добавить к cta-2__content класс cta-2__content_dark-->
-    <!-- Заменить класс btn_black на btn_white-->
-    <!-- Заменить класс btn_trs-black на btn_trs-white-->
     <section class="cta-2 section block">
       <div class="cta-2__container container"> 
         <div class="row cta-2__list"> 
-          <div class="col-6 col-xl cta-2__item-order">
+          <div class="col-6 col-xl-7 col-lg cta-2__item-order">
             <div class="cta-2__content">
               <div class="cta-2__text-block">
                 <h2 class="cta-2__title">Connected to what matters</h2>
@@ -30,7 +26,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6 col-xl">
+          <div class="col-6 col-xl-5 col-lg">
             <picture class="cta-2__img-wrap"><img class="cta-2__img" src="../assets/images/cta/img-2.jpg" alt=""></picture>
           </div>
         </div>
