--- a/menu/menu-4.html
+++ b/menu/menu-4.html
@@ -11,10 +11,14 @@
     <script defer src="../assets/scripts/base.js"></script>
   </head>
   <body>
-    <!-- Добавить к block класс block_dark-->
     <section class="menu-4 section block">
       <div class="menu-4__container container"> 
-        <h2 class="menu-4__title">Weekly Lunch menu excerpt</h2>
+        <div class="menu-4__text-block"> 
+          <div class="menu-4__title-block"><span class="menu-4__subtitle subtitle">Delicious</span>
+            <h2 class="menu-4__title">Weekly Lunch menu excerpt</h2>
+          </div>
+          <p class="menu-4__desc">Montag bis Samstag von 11:30 bis 15:00 Uhr (Dienstag Ruhetag)</p>
+        </div>
         <div class="menu-4__block"> 
           <h3 class="menu-4__block-title">Mexican cuisine</h3>
           <div class="row menu-4__block-list">
