--- a/gallery/gallery-3-4.html
+++ b/gallery/gallery-3-4.html
@@ -11,19 +11,18 @@
     <script defer src="../assets/scripts/base.js"></script>
   </head>
   <body>
-    <!-- Добавить к block класс block_dark-->
     <section class="gallery-3-4 section block">
       <div class="gallery-3-4__container container"> 
         <h2 class="gallery-3-4__title">Gallery </h2>
-        <div class="row gallery-3-4__list"><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-4__item" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+        <div class="row gallery-3-4__list"><a class="gallery-3-4__item gallery-3-4__item_8" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_5" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_5" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-4__item gallery-3-4__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
             <picture class="gallery-3-4__img-wrap"><img class="gallery-3-4__img" src="../assets/images/gallery/4/item-9.jpg" alt=""></picture></a></div>
       </div>
     </section>
