--- a/gallery/gallery-3-6.html
+++ b/gallery/gallery-3-6.html
@@ -12,40 +12,43 @@
     <script defer src="../assets/scripts/gallery/gallery-3-6.js"></script>
   </head>
   <body>
-    <!-- Добавить к block класс block_dark-->
     <section class="gallery-3-6 section block">
       <div class="gallery-3-6__container container"> 
         <h2 class="gallery-3-6__title">Gallery </h2>
-        <div class="row gallery-3-6__list"> <a class="gallery-3-6__item gallery-3-6__item_8" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
+        <div class="row gallery-3-6__list"> <a class="gallery-3-6__item gallery-3-6__item_8" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-2.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-3.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-4.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_2" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-5.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_5" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-6.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-7.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+            <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-8.jpg" alt=""></picture></a><a class="gallery-3-6__item gallery-3-6__item_4" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
             <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-9.jpg" alt=""></picture></a></div>
         <div class="swiper gallery-3-6__slider">
-          <ul class="swiper-wrapper"> 
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-1.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-2.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-3.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-4.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-5.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-6.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-7.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-8.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="../assets/images/gallery/4/item-9.jpg" alt=""></picture></a></li>
+          <ul class="swiper-wrapper">
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-3-6__link" data-fslightbox="gallery-3-6" href="https://placehold.co/1200x600">
+                <picture class="gallery-3-6__img-wrap"><img class="gallery-3-6__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
           </ul>
         </div>
       </div>
