--- a/gallery/gallery-5-2.html
+++ b/gallery/gallery-5-2.html
@@ -12,8 +12,6 @@
     <script defer src="../assets/scripts/gallery/gallery-5-2.js"></script>
   </head>
   <body>
-    <!-- Добавить к block класс block_dark-->
-    <!-- Добавить к btn-arrow класс btn-arrow_dark-->
     <section class="gallery-5-2 section block">
       <div class="gallery-5-2__content">
         <div class="gallery-5-2__container container"> 
@@ -21,19 +19,28 @@
         </div>
         <div class="swiper gallery-5-2__slider">
           <ul class="swiper-wrapper"> 
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-3.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-1.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-3-4" href="https://placehold.co/1200x600">
-                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-2.jpg" alt=""></picture></a></li>
-            <li class="swiper-slide">
-              <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="../assets/images/gallery/5/gallery-3.jpg" alt=""></picture>
-            </li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+            <li class="swiper-slide"><a class="gallery-5-2__link" data-fslightbox="gallery-5-2" href="https://placehold.co/1200x600">
+                <picture class="gallery-5-2__img-wrap"><img class="gallery-5-2__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
           </ul>
           <div class="gallery-5-2__slider-btn-block">
             <button class="gallery-5-2__slider-btn gallery-5-2__slider-btn_prev btn-arrow" type="button">
