--- a/gallery/gallery-8-1.html
+++ b/gallery/gallery-8-1.html
@@ -15,18 +15,30 @@
     <section class="gallery-8-1 section block">
       <div class="gallery-8-1__container container"> 
         <h2 class="gallery-8-1__title">Gallery </h2>
-        <div class="row gallery-8-1__list"> <a class="gallery-8-1__item gallery-8-1__item_12" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/1290x516" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_6" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/550x500" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_3" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/354x500" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_3" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/354x500" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_4" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_4" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_4" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_3" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/280x400" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_5" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/500x400" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_2" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/231x400" alt=""></picture></a><a class="gallery-8-1__item gallery-8-1__item_2" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
-            <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/231x400" alt=""></picture></a></div>
+        <ul class="row gallery-8-1__list"> 
+          <li class="gallery-8-1__item gallery-8-1__item_12">       <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/1290x516" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_6">             <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/550x500" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_3">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/354x500" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_3">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/354x500" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_4"> <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_4">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_4">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/420x300" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_3"> <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/280x400" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_5">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/500x400" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_2">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/231x400" alt=""></picture></a></li>
+          <li class="gallery-8-1__item gallery-8-1__item_2">               <a class="gallery-8-1__link" data-fslightbox="gallery-8-1" href="https://placehold.co/1200x600">
+              <picture class="gallery-8-1__img-wrap"><img class="gallery-8-1__img" src="https://placehold.co/231x400" alt=""></picture></a></li>
+        </ul>
         <div class="gallery-8-1__slider-block">
           <div class="swiper gallery-8-1__slider">
             <ul class="swiper-wrapper">
